--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.9.1
 awsebcli==3.25
 bcrypt==4.3.0
 blessed==1.21.0
+boto3==1.39.4
 botocore==1.39.4
 cement==2.10.14
 certifi==2025.7.9
@@ -12,6 +13,7 @@ cryptography==45.0.5
 decorator==5.2.1
 Deprecated==1.2.18
 Django==4.2.11
+ecdsa==0.19.1
 fabric==3.2.2
 gunicorn==23.0.0
 idna==3.10
@@ -21,11 +23,16 @@ packaging==24.2
 paramiko==3.5.1
 pathspec==0.12.1
 psycopg2-binary==2.9.10
+pyasn1==0.6.1
 pycparser==2.22
 PyNaCl==1.5.0
 python-dateutil==2.9.0.post0
+python-dotenv==1.1.1
+python-jose==3.5.0
 PyYAML==6.0.2
 requests==2.32.4
+rsa==4.9.1
+s3transfer==0.13.0
 semantic-version==2.10.0
 setuptools==80.9.0
 six==1.17.0
