Image pipeline v2: add variants & metadata, zip code dataset + distance calc refactor, seeding overhaul (adult-only portraits), admin filters, migrations

--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,6 @@ stripe
 Pillow
 django-formtools
 django-sslserver
-uszipcode
+# uszipcode removed after migrating to local ZipCode dataset (seeded via full load command)
 sqlalchemy-mate<2.0
 Faker
