Members area + nav overhaul: add FeedPost/Connection models and BlogPost.visibility with migration; new members pages (home, feed, connections, blog, stats, account); refactor header (full-width member bar, sticky desktop, centered desktop nav, earlier mobile, remove member location, logout as button, rename Feed→Home and reorder); redirect login and profile submit to members feed; blog visibility in forms/views; footer fix; CSS/JS tweaks.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -12,6 +12,27 @@
 			"type": "shell",
 			"command": "/Users/wescollins/Documents/Therapy-Connected/.venv/bin/python -m django makemigrations users",
 			"args": []
+		},
+		{
+			"label": "makemigrations-users",
+			"type": "shell",
+			"command": "/Users/wescollins/Documents/Therapy-Connected/.venv/bin/python -m django makemigrations users",
+			"args": []
+		},
+		{
+			"label": "makemigrations-users",
+			"type": "shell",
+			"command": "/Users/wescollins/Documents/Therapy-Connected/.venv/bin/python -m django makemigrations users"
+		},
+		{
+			"label": "tc-makemigrations",
+			"type": "shell",
+			"command": "/Users/wescollins/Documents/Therapy-Connected/.venv/bin/python",
+			"args": [
+				"manage.py",
+				"makemigrations",
+				"users"
+			]
 		}
 	]
 }
