UI: move PS1 below chips on top therapist card; standalone public profile fixes
- Hide Identity & Qualifications; stack Fees/Client Focus\n- Safari polyfills for Element methods\n- Suppress error banner on public profile\n- Respect explicit False flags via default_if_none\n- Add JSON-LD schema\n- Carousel/blog tweaks; members-only filter\n- Include new testing/evaluation section and migration

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -33,6 +33,16 @@
 				"makemigrations",
 				"users"
 			]
+		},
+		{
+			"label": "tc-makemigrations",
+			"type": "shell",
+			"command": "/Users/wescollins/Documents/Therapy-Connected/.venv/bin/python",
+			"args": [
+				"manage.py",
+				"makemigrations",
+				"users"
+			]
 		}
 	]
 }
