--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -43,6 +43,16 @@
 				"makemigrations",
 				"users"
 			]
+		},
+		{
+			"label": "tc-makemigrations",
+			"type": "shell",
+			"command": "/Users/wescollins/Documents/Therapy-Connected/.venv/bin/python",
+			"args": [
+				"manage.py",
+				"makemigrations",
+				"users"
+			]
 		}
 	]
 }
